fix: header z-index 부여

--- a/week2/Assignment1/src/styles/style.css
+++ b/week2/Assignment1/src/styles/style.css
@@ -13,6 +13,9 @@ body {
   background-color: #00203f;
   z-index: 1;
 }
+:root {
+  --box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 3.6px 13px rgba(0, 0, 0, 0.07), 0px 8.4px 23px rgba(0, 0, 0, 0.06), 0px 23px 35px rgba(0, 0, 0, 0.05), 0px 4.5px 10px rgba(0, 0, 0, 0.05);
+}
 
 /* HAEDER */
 header {
@@ -24,6 +27,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 999;
 }
 header h1 {
   margin-left: 20px;
@@ -92,6 +96,7 @@ nav #type_wrapper {
   margin: 10px 0 0 10px;
   padding: 15px;
   border-radius: 20px;
+  box-shadow: var(--box-shadow);
   background-color: #68dca7;
   display: flex;
   flex-direction: column;
@@ -102,6 +107,7 @@ nav #type_wrapper article {
   flex-direction: row;
   align-items: center;
   height: 30px;
+  box-shadow: var(--box-shadow);
   background-color: whitesmoke;
   padding: 5px;
   border-radius: 10px;
@@ -143,7 +149,9 @@ nav #type_wrapper article input {
   height: 300px;
   min-width: 200px;
   border-radius: 20px;
+  box-shadow: var(--box-shadow);
   background-color: #adefd1;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -152,9 +160,22 @@ nav #type_wrapper article input {
 #card_section article h2 {
   margin-top: 10px;
 }
-#card_section article .tag_wrapper {
+#card_section article .tag_modalButton_wrapper {
   width: 10rem;
   height: 15px;
+  display: flex;
+}
+#card_section article .tag_modalButton_wrapper .material-symbols-outlined {
+  width: 16px;
+  height: 16px;
+  margin: 0;
+  color: #00203f;
+  transform: scale(0.6);
+}
+#card_section article .tag_modalButton_wrapper .tag_wrapper {
+  width: 80%;
+  height: 15px;
+  padding-left: 10%;
   margin-bottom: 20px;
   display: flex;
   flex-direction: row;
@@ -164,16 +185,14 @@ nav #type_wrapper article input {
   flex-wrap: wrap;
   overflow-y: hidden;
 }
-#card_section article .tag_wrapper span {
+#card_section article .tag_modalButton_wrapper .tag_wrapper span {
   font-size: 15px;
   color: gray;
-}
-#card_section article .tag_wrapper span::before {
-  content: "#";
 }
 #card_section article img {
   max-width: 80%;
   max-height: 60%;
+  margin-top: 20px;
   background-color: black;
 }
 #card_section article .material-symbols-outlined {
@@ -184,6 +203,28 @@ nav #type_wrapper article input {
 }
 #card_section article .material-symbols-outlined:hover {
   color: black;
+}
+#card_section article .songCard_modal_wrapper {
+  top: 20%;
+  width: 70%;
+  min-height: 60px;
+  padding: 10px 20px;
+  border-radius: 20px;
+  box-shadow: var(--box-shadow);
+  color: white;
+  background-color: #0db56a;
+  position: absolute;
+  display: none;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+#card_section article .songCard_modal_wrapper span {
+  font-size: 15px;
+}
+#card_section article .tag_modalButton_wrapper .tag_wrapper span::before, #card_section article .songCard_modal_wrapper span::before {
+  content: "#";
 }
 @media (max-width: 689px) {
   #card_section {
